--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -323,8 +323,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Split the Data into Training and Testing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['home_ownership',\n",
+       " 'verification_status',\n",
+       " 'issue_d',\n",
+       " 'pymnt_plan',\n",
+       " 'initial_list_status',\n",
+       " 'next_pymnt_d',\n",
+       " 'application_type',\n",
+       " 'hardship_flag',\n",
+       " 'debt_settlement_flag']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Generate categorical variable list\n",
+    "encode_col = df.dtypes[df.dtypes == \"object\"].index.tolist()\n",
+    "encode_col.remove('loan_status')\n",
+    "encode_col"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -536,32 +574,15 @@
        "[5 rows x 96 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Encoding the data\n",
-    "df_encoded = pd.get_dummies(df, columns=[\"home_ownership\", \"verification_status\", \"issue_d\", \"pymnt_plan\", \"initial_list_status\", \"next_pymnt_d\", \"application_type\", \"hardship_flag\", \"debt_settlement_flag\"])\n",
+    "df_encoded = pd.get_dummies(df, columns=encode_col)\n",
     "df_encoded.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# grouping = list(df_encoded)\n",
-    "# grouping"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Split the Data into Training and Testing"
    ]
   },
   {
@@ -901,79 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>loan_status</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>low_risk</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>low_risk</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>low_risk</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>low_risk</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>low_risk</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  loan_status\n",
-       "0    low_risk\n",
-       "1    low_risk\n",
-       "2    low_risk\n",
-       "3    low_risk\n",
-       "4    low_risk"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -984,7 +933,7 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,77 +979,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Counter({'loan_status': 1})"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Resample the training data with the RandomOversampler\n",
-    "# YOUR CODE HERE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LogisticRegression(random_state=1)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Train the Logistic Regression model using the resampled data\n",
-    "# YOUR CODE HERE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.646602844334948"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[  75,   26],\n",
-       "       [7686, 9418]])"
+       "Counter({'loan_status': 1})"
       ]
      },
      "execution_count": 12,
@@ -1109,8 +994,13 @@
     }
    ],
    "source": [
-    "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "# Resample the training data with the RandomOversampler\n",
+    "import imblearn\n",
+    "from imblearn.over_sampling import RandomOverSampler\n",
+    "oversample = RandomOverSampler(random_state=1)\n",
+    "X_over, y_over = oversample.fit_resample(X_train, y_train)\n",
+    "os_counter = Counter(y_over)\n",
+    "os_counter"
    ]
   },
   {
@@ -1119,50 +1009,22 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                   pre       rec       spe        f1       geo       iba       sup\n",
-      "\n",
-      "  high_risk       0.01      0.74      0.55      0.02      0.64      0.42       101\n",
-      "   low_risk       1.00      0.55      0.74      0.71      0.64      0.40     17104\n",
-      "\n",
-      "avg / total       0.99      0.55      0.74      0.71      0.64      0.40     17205\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### SMOTE Oversampling"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
      "data": {
       "text/plain": [
-       "Counter({'loan_status': 1})"
+       "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Resample the training data with SMOTE\n",
-    "# YOUR CODE HERE"
+    "# Train the Logistic Regression model using the resampled data\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "os_model = LogisticRegression(random_state=1)\n",
+    "os_model.fit(X_over, y_over)\n",
+    "os_model"
    ]
   },
   {
@@ -1173,7 +1035,7 @@
     {
      "data": {
       "text/plain": [
-       "LogisticRegression(random_state=1)"
+       "0.5801513519227396"
       ]
      },
      "execution_count": 15,
@@ -1182,8 +1044,10 @@
     }
    ],
    "source": [
-    "# Train the Logistic Regression model using the resampled data\n",
-    "# YOUR CODE HERE"
+    "# Calculated the balanced accuracy score\n",
+    "from sklearn.metrics import balanced_accuracy_score\n",
+    "os_predictions = os_model.predict(X_test)\n",
+    "balanced_accuracy_score(y_test, os_predictions)"
    ]
   },
   {
@@ -1194,7 +1058,8 @@
     {
      "data": {
       "text/plain": [
-       "0.662394124702461"
+       "array([[   47,    57],\n",
+       "       [ 4987, 12114]], dtype=int64)"
       ]
      },
      "execution_count": 16,
@@ -1203,30 +1068,10 @@
     }
    ],
    "source": [
-    "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[   64,    37],\n",
-       "       [ 5283, 11821]])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "from sklearn.metrics import confusion_matrix\n",
+    "os_matrix = confusion_matrix(y_test, os_predictions)\n",
+    "os_matrix"
    ]
   },
   {
@@ -1240,17 +1085,144 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.01      0.63      0.69      0.02      0.66      0.44       101\n",
-      "   low_risk       1.00      0.69      0.63      0.82      0.66      0.44     17104\n",
+      "  high_risk       0.01      0.45      0.71      0.02      0.57      0.31       104\n",
+      "   low_risk       1.00      0.71      0.45      0.83      0.57      0.33     17101\n",
       "\n",
-      "avg / total       0.99      0.69      0.63      0.81      0.66      0.44     17205\n",
+      "avg / total       0.99      0.71      0.45      0.82      0.57      0.33     17205\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "from imblearn.metrics import classification_report_imbalanced\n",
+    "os_report = classification_report_imbalanced(y_test, os_predictions)\n",
+    "print(os_report)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SMOTE Oversampling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'loan_status': 1})"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Resample the training data with SMOTE\n",
+    "from imblearn.over_sampling import SMOTE\n",
+    "sm = SMOTE(random_state=1)\n",
+    "X_res, y_res = sm.fit_resample(X_train, y_train)\n",
+    "sm_counter = Counter(y_res)\n",
+    "sm_counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(random_state=1)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Train the Logistic Regression model using the resampled data\n",
+    "sm_model = LogisticRegression(random_state=1)\n",
+    "sm_model.fit(X_res, y_res)\n",
+    "sm_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6476549954343651"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculated the balanced accuracy score\n",
+    "sm_predictions = sm_model.predict(X_test)\n",
+    "balanced_accuracy_score(y_test, sm_predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[   58,    46],\n",
+       "       [ 4487, 12614]], dtype=int64)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Display the confusion matrix\n",
+    "sm_matrix = confusion_matrix(y_test, sm_predictions)\n",
+    "sm_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   pre       rec       spe        f1       geo       iba       sup\n",
+      "\n",
+      "  high_risk       0.01      0.56      0.74      0.02      0.64      0.40       104\n",
+      "   low_risk       1.00      0.74      0.56      0.85      0.64      0.42     17101\n",
+      "\n",
+      "avg / total       0.99      0.74      0.56      0.84      0.64      0.42     17205\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print the imbalanced classification report\n",
+    "sm_report = classification_report_imbalanced(y_test, sm_predictions)\n",
+    "print(sm_report)"
    ]
   },
   {
