Undersampling with ClusterCentroids.

--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -1244,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1253,7 +1253,7 @@
        "Counter({'loan_status': 1})"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1261,12 +1261,16 @@
    "source": [
     "# Resample the data using the ClusterCentroids resampler\n",
     "# Warning: This is a large dataset, and this step may take some time to complete\n",
-    "# YOUR CODE HERE"
+    "from imblearn.under_sampling import ClusterCentroids\n",
+    "cc = ClusterCentroids(random_state=1)\n",
+    "X_resampled, y_resampled = cc.fit_resample(X_train, y_train)\n",
+    "cc_counter = Counter(y_res)\n",
+    "cc_counter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1275,62 +1279,65 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
-    "# YOUR CODE HERE"
+    "cc_model = LogisticRegression(random_state=1)\n",
+    "cc_model.fit(X_resampled, y_resampled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5442166848817717"
+       "0.531775863309838"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "cc_predictions = cc_model.predict(X_test)\n",
+    "balanced_accuracy_score(y_test, cc_predictions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[   68,    33],\n",
-       "       [10003,  7101]])"
+       "array([[  55,   49],\n",
+       "       [7957, 9144]], dtype=int64)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "cc_matrix = confusion_matrix(y_test, cc_predictions)\n",
+    "cc_matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1339,17 +1346,18 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.01      0.67      0.42      0.01      0.53      0.29       101\n",
-      "   low_risk       1.00      0.42      0.67      0.59      0.53      0.27     17104\n",
+      "  high_risk       0.01      0.53      0.53      0.01      0.53      0.28       104\n",
+      "   low_risk       0.99      0.53      0.53      0.70      0.53      0.28     17101\n",
       "\n",
-      "avg / total       0.99      0.42      0.67      0.58      0.53      0.27     17205\n",
+      "avg / total       0.99      0.53      0.53      0.69      0.53      0.28     17205\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "cc_report = classification_report_imbalanced(y_test, cc_predictions)\n",
+    "print(cc_report)"
    ]
   },
   {
