Use SMOTEENN to Predict Credit Risk.

--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -1379,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1388,7 +1388,7 @@
        "Counter({'loan_status': 1})"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1396,12 +1396,16 @@
    "source": [
     "# Resample the training data with SMOTEENN\n",
     "# Warning: This is a large dataset, and this step may take some time to complete\n",
-    "# YOUR CODE HERE"
+    "from imblearn.combine import SMOTEENN\n",
+    "smt = SMOTEENN(random_state=1)\n",
+    "X_combo, y_combo = smt.fit_resample(X_train, y_train)\n",
+    "smt_counter = Counter(y_combo)\n",
+    "smt_counter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1410,62 +1414,65 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
-    "# YOUR CODE HERE"
+    "smt_model = LogisticRegression(random_state=1)\n",
+    "smt_model.fit(X_combo, y_combo)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6400726134353378"
+       "0.6598149343493183"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "smt_predictions = smt_model.predict(X_test)\n",
+    "balanced_accuracy_score(y_test, smt_predictions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[  71,   30],\n",
-       "       [7232, 9872]])"
+       "array([[   67,    37],\n",
+       "       [ 5551, 11550]], dtype=int64)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "smt_matrix = confusion_matrix(y_test, smt_predictions)\n",
+    "smt_matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1474,25 +1481,19 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.01      0.70      0.58      0.02      0.64      0.41       101\n",
-      "   low_risk       1.00      0.58      0.70      0.73      0.64      0.40     17104\n",
+      "  high_risk       0.01      0.64      0.68      0.02      0.66      0.43       104\n",
+      "   low_risk       1.00      0.68      0.64      0.81      0.66      0.44     17101\n",
       "\n",
-      "avg / total       0.99      0.58      0.70      0.73      0.64      0.40     17205\n",
+      "avg / total       0.99      0.68      0.64      0.80      0.66      0.44     17205\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "smt_report = classification_report_imbalanced(y_test, smt_predictions)\n",
+    "print(smt_report)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
