--- a/credit_risk_ensemble.ipynb
+++ b/credit_risk_ensemble.ipynb
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +1007,7 @@
        "BalancedRandomForestClassifier(random_state=1)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1031,7 +1031,7 @@
        "0.7887512850910909"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1055,7 +1055,7 @@
        "       [ 2146, 14958]], dtype=int64)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1069,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1095,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1215,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1224,62 +1224,66 @@
        "EasyEnsembleClassifier(n_estimators=100, random_state=1)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Train the EasyEnsembleClassifier\n",
-    "# YOUR CODE HERE"
+    "from imblearn.ensemble import EasyEnsembleClassifier\n",
+    "ee_model = EasyEnsembleClassifier(n_estimators=100, random_state=1)\n",
+    "ee_model.fit(X_train_scaled, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9316600714093861"
+       "0.931601605553446"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "ee_predictions = ee_model.predict(X_test_scaled)\n",
+    "balanced_accuracy_score(y_test, ee_predictions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array([[   93,     8],\n",
-       "       [  983, 16121]])"
+       "       [  985, 16119]], dtype=int64)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "ee_matrix = confusion_matrix(y_test, ee_predictions)\n",
+    "ee_matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1298,15 +1302,9 @@
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "ee_report = classification_report_imbalanced(y_test, ee_predictions)\n",
+    "print(ee_report)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
